--- a/Cuba/index.html
+++ b/Cuba/index.html
@@ -28,24 +28,24 @@
         <div class="generic-article-preview">
             <table>
                 <tr>
-                    <td><h3 align="right" class="sub-header">Че Гевара</h3><img class="preview-img" src="http://images.aif.ru/006/268/f590df7f5e770ee4b0f8ed1fd9117c5d.jpg"></td>
-                    <td><p align="left">В современном мире есть мало фигур, способных соперничать с Эрнесто Че Геварой во всемирной популярности. Он превратился в символ Революции, символ борьбы против любой лжи и несправедливости.
-                    </p><p align="left"><a href="http://shkolazhizni.ru/biographies/articles/13109/">Краткая биография →</a></p></td>
-                </tr>
-            </table>
-        </div>
-        <div class="generic-article-preview">
-            <table>
-                <tr>
-                    <td><p align="right">Такие продукты, как кубинский кофе, кубинские сигары, кубинский ром - известны далеко и широко за пределами Кубы. Эти товары считаются лучшими на рынке за их потрясающий вкус и высокое качество.
-                    </p><p align="right">
+                    <td><h3 align="right" class="sub-header">Знаменитые продукты</h3><img class="preview-img" src="http://www.ekatgid.ru/image/1420378664_483.jpg"></td>
+                    <td><p align="left">Такие продукты, как кубинский кофе, кубинские сигары, кубинский ром - известны далеко и широко за пределами Кубы. Эти товары считаются лучшими на рынке за их потрясающий вкус и высокое качество.
+                    </p><p align="left">
                             <ul type="circle">
                                 <li><a href="http://coffemanka.ru/kubinskij-kofe/">Кофе</a></li>
                                 <li><a href="http://latintour.ru/kuba/cu-info/kubinskue-sigary.html">Сигары</a></li>
                                 <li><a href="http://nalivali.ru/alkogolnye-napitki-mira/rom/marki-roma/brutalnyj-kubinskij-rom.html">Ром</a></li>
                             </ul>
                         </p></td>
-                    <td><h3 align="left" class="sub-header">Знаменитые продукты</h3><img class="preview-img" src="http://www.ekatgid.ru/image/1420378664_483.jpg"></td>
+                </tr>
+            </table>
+        </div>
+        <div class="generic-article-preview">
+            <table>
+                <tr>
+                    <td><p align="right">В современном мире есть мало фигур, способных соперничать с Эрнесто Че Геварой во всемирной популярности. Он превратился в символ Революции, символ борьбы против любой лжи и несправедливости.
+                    </p><p align="right"><a href="http://shkolazhizni.ru/biographies/articles/13109/">Краткая биография →</a></p></td>
+                    <td><h3 align="left" class="sub-header">Че Гевара</h3><img class="preview-img" src="http://images.aif.ru/006/268/f590df7f5e770ee4b0f8ed1fd9117c5d.jpg"></td>
                 </tr>
             </table>
         </div>
