--- a/Cuba/index.html
+++ b/Cuba/index.html
@@ -44,7 +44,7 @@
             <table>
                 <tr>
                     <td><p align="right">В современном мире есть мало фигур, способных соперничать с Эрнесто Че Геварой во всемирной популярности. Он превратился в символ Революции, символ борьбы против любой лжи и несправедливости.
-                    </p><p align="right"><a href="http://shkolazhizni.ru/biographies/articles/13109/">Краткая биография →</a></p></td>
+                    </p><p align="right"><a href="http://shkolazhizni.ru/biographies/articles/13109/">← Краткая биография</a></p></td>
                     <td><h3 align="left" class="sub-header">Че Гевара</h3><img class="preview-img" src="http://images.aif.ru/006/268/f590df7f5e770ee4b0f8ed1fd9117c5d.jpg"></td>
                 </tr>
             </table>
