Added map and quiz

--- a/Cuba/index.html
+++ b/Cuba/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>✮ Куба</title>
+        <title>✮ Куба ✮ Инфо ✮</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <h1 align="center" class="big-header">Куба далека, Куба рядом!</h1>
+        <h3 align="center" class="navbar-subheader">Информация | <a href="map.html">Карта</a> | <a href="quiz.html">Викторина</a><h3>
         <div class="generic-article-preview">
             <table>
                 <tr>
