--- a/Cuba/quiz.html
+++ b/Cuba/quiz.html
@@ -88,6 +88,28 @@
                         </form>
                     </div>
                 </td>
+                <td align="right">
+                    <div class="adverts-board">
+                        <table align="center">
+                            <tr>
+                                <td align="center">
+                                    <div class="advert">
+                                        <a href="https://goo.gl/h0WVjx" target="_blank"><img src="mathlife-advert.gif">
+                                        <p><font size="4"><b><u>Сенсация! На сайте mathlife.cloud обнаружена уязвимость, используя которую можно бесплатно разблокировать все сервисы MathLife! Нужно всего лишь установить...</a></u></b></font></p>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center">
+                                    <div class="advert">
+                                        <a href="https://goo.gl/gwqnU4" target="_blank"><img src="fischbein-advert.gif">
+                                        <p><font size="4"><b><u>ШОК! На этой неделе Дмитрий Ефимович Фишбейн назвал имя самого неуспевающего лицеиста! Директор лицея также сообщает, что этот человек находится под риском отчисления! Д.Е. Фишбейн: "Мне очень жаль, что этому человеку, скорее всего, придется скоро покинуть лицей..."</a></u></b></font></p>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </td>
             </tr>
         </table>
         <br>
